--- a/app/src/main/res/layout/dialog_reset_password.xml
+++ b/app/src/main/res/layout/dialog_reset_password.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -14,6 +18,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp">
+
         <EditText
             android:id="@+id/reset_pass_email"
             android:layout_width="match_parent"
@@ -62,6 +67,6 @@
 
     </LinearLayout>
 
+    </LinearLayout>
 
-
-</LinearLayout>
+</ScrollView>
