--- a/app/src/main/res/layout-land/activity_create_channel.xml
+++ b/app/src/main/res/layout-land/activity_create_channel.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:orientation="vertical">
 
         <TextView
@@ -16,19 +17,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="60dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
             android:fontFamily="casual"
             android:text="@string/add_channel_title"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="35sp"
+            android:textSize="38sp"
             android:textStyle="bold" />
-
+        
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp">
+            android:layout_marginTop="10dp">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edittext_create_channel_name"
@@ -36,7 +37,6 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/create_channel_name"
                 android:textSize="24sp" />
-
         </android.support.design.widget.TextInputLayout>
 
         <Button
@@ -45,10 +45,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
+            android:layout_marginBottom="60dp"
             android:background="@android:color/holo_orange_light"
-            android:text="@string/create_channel"
             android:padding="20dp"
+            android:text="@string/create_channel"
             android:textSize="30sp" />
 
     </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+</ScrollView>
