--- a/app/src/main/res/layout-land/activity_create_event.xml
+++ b/app/src/main/res/layout-land/activity_create_event.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/add_event_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
             android:fontFamily="casual"
             android:text="@string/add_event_title"
             android:textAlignment="center"
-            android:textAllCaps="false"
             android:textColor="@android:color/black"
             android:textSize="38sp"
             android:textStyle="bold" />
@@ -38,14 +37,12 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/add_event_name"
                 android:textSize="24sp" />
-
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-           >
+            android:layout_marginTop="10dp">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edittext_add_event_location"
@@ -56,8 +53,6 @@
                 android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
-
-
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -87,9 +82,7 @@
                 android:hint="@string/add_event_time"
                 android:textSize="24sp" />
 
-
         </android.support.design.widget.TextInputLayout>
-
 
         <Button
             android:id="@+id/button_create_event"
