--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:orientation="vertical"
         android:weightSum="1">
@@ -18,11 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="80dp"
+            android:layout_marginTop="30dp"
             android:fontFamily="casual"
             android:text="@string/add_event_title"
             android:textAlignment="center"
+            android:textColor="@android:color/black"
             android:textSize="35sp"
             android:textStyle="bold" />
 
