--- a/app/src/main/res/layout/dialog_change_mail.xml
+++ b/app/src/main/res/layout/dialog_change_mail.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    >
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -62,7 +67,8 @@
         android:orientation="horizontal"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:weightSum="1">
 
         <Button
             android:id="@+id/dialog_confirm_button"
@@ -81,10 +87,10 @@
             android:background="@android:color/holo_orange_light"
             android:padding="10dp"
             android:text="@string/cancel"
-            android:layout_marginEnd="40dp"/>
+            android:layout_marginEnd="40dp"
+            android:layout_weight="0.11" />
 
     </LinearLayout>
 
-
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
