--- a/app/src/main/res/layout/fragment_channel_list.xml
+++ b/app/src/main/res/layout/fragment_channel_list.xml
@@ -21,9 +21,6 @@
             android:layout_marginEnd="5dp"
             android:hint="@string/search_channel_text"
             android:textSize="30sp" />
-
-
-
     </RelativeLayout>
 
     <RelativeLayout
@@ -83,9 +80,10 @@
              xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/recycler_channel_list"
             android:layout_width="match_parent"
-            android:layout_height="811dp"
+            android:layout_height="match_parent"
             android:scrollbars="vertical"
-            android:layout_below="@+id/linlaHeaderProgress">
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true">
         </android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
