--- a/app/src/main/res/layout/list_item_argument.xml
+++ b/app/src/main/res/layout/list_item_argument.xml
@@ -2,13 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp">
+    android:layout_height="40dp"
+    android:background="@color/about_separator_color">
 
     <TextView
         android:id="@+id/list_item_argument_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="25dp"
         android:fontFamily="monospace"
         android:gravity="center_vertical"
         android:textAllCaps="false"
