--- a/app/src/main/res/layout-normal/fragment_channel_list.xml
+++ b/app/src/main/res/layout-normal/fragment_channel_list.xml
@@ -15,12 +15,12 @@
         <EditText
             android:id="@+id/search_channel_editText"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="3dp"
             android:layout_marginStart="3dp"
             android:drawableStart="@android:drawable/ic_menu_search"
             android:hint="@string/search_channel_text"
-            android:textSize="18sp" />
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -62,18 +62,18 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
                 android:text="@string/no_channel_find"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_create_group"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:background="@android:color/holo_orange_light"
-                android:padding="5dp"
+                android:padding="10dp"
                 android:text="@string/create_channel"
-                android:textSize="14sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
