--- a/app/src/main/res/layout-land/fragment_event.xml
+++ b/app/src/main/res/layout-land/fragment_event.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+
+<TableLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginStart="75dp"
     android:layout_marginEnd="75dp"
+    android:paddingTop="50dp"
     android:stretchColumns="*">
 
     <TableRow>
@@ -116,3 +123,4 @@
     </TableRow>
 
 </TableLayout>
+</ScrollView>
