--- a/app/src/main/res/layout-large-land/fragment_create_exam.xml
+++ b/app/src/main/res/layout-large-land/fragment_create_exam.xml
@@ -18,6 +18,7 @@
             android:fontFamily="casual"
             android:text="@string/add_exam"
             android:textAlignment="center"
+            android:textColor="@android:color/black"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -83,7 +84,7 @@
                     android:hint="@string/argument_name" />
 
 
-        </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
 
