--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -95,6 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
+            android:layout_marginBottom="40dp"
             android:padding="20dp"
             android:background="@android:color/holo_orange_light"
             android:text="@string/create_event"
