--- a/app/src/main/res/layout-land/activity_create_event.xml
+++ b/app/src/main/res/layout-land/activity_create_event.xml
@@ -17,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
             android:fontFamily="casual"
             android:text="@string/add_event_title"
             android:textAlignment="center"
@@ -80,6 +80,24 @@
                 android:layout_height="wrap_content"
                 android:focusable="false"
                 android:hint="@string/add_event_time"
+                android:textSize="24sp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edittext_add_event_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="3"
+                android:inputType="textMultiLine"
+                android:gravity="start"
+                android:hint="@string/add_event_description"
                 android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
