--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -85,6 +85,22 @@
                 android:hint="@string/add_event_time"
                 android:textSize="24sp" />
 
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edittext_add_event_description"
+                android:inputType="textMultiLine"
+                android:gravity="start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="3"
+                android:hint="@string/add_event_description"
+                android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
 
