--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -59,9 +59,20 @@
         android:text="università ingegneria"
         android:textAlignment="center"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:textColor="@color/common_google_signin_btn_text_light_default"
         android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/event_description_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Descrizione"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="70dp"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="24sp"/>
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_event_view_partecipants"
