--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -79,8 +79,9 @@
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:background="@android:color/holo_orange_light"
-            android:padding="20dp"
-            android:text="@string/create_account" />
+            android:padding="12dp"
+            android:text="@string/create_account"
+            android:textSize="30sp" />
 
         <TextView android:id="@+id/link_login"
             android:layout_width="match_parent"
