--- a/app/src/main/res/layout-large-port/fragment_create_exam.xml
+++ b/app/src/main/res/layout-large-port/fragment_create_exam.xml
@@ -95,6 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp"
             android:background="@android:color/holo_orange_light"
             android:text="@string/add_exam"
             android:textSize="30sp" />
