--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -55,6 +55,15 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <TextView
+            android:id="@+id/link_to_saw_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/link_to_saw"
+            android:textColor="#0645AD"
+            android:layout_marginTop="15dp"
+            android:textAlignment="center"
+            android:textSize="18sp"/>
 
 
         <android.support.design.widget.TextInputLayout
