--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -117,7 +117,7 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_fake_event_share_facebook"
-            android:drawableStart="@drawable/facebook_icon"
+            android:layout_marginTop="10dp"
             android:drawablePadding="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -128,7 +128,8 @@
             android:text="@string/event_share_facebook"
             android:textColor="@color/white"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="gone"/>
 
         <com.facebook.share.widget.ShareButton
             android:id="@+id/btn_event_share_facebook"
